--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tetris"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800"
+        Title="俄羅斯方塊V1.0" Height="600" Width="800"
         MinHeight="600" MinWidth="600" Foreground="White" 
         FontFamily="Segoe UI Light" FontSize="28"
         KeyDown="Window_KeyDown">
@@ -22,13 +22,48 @@
         <Grid.Background>
             <ImageBrush ImageSource="UI/Background.png"/>
         </Grid.Background>
-        <Viewbox Grid.Row="1" Grid.Column="1" Margin="0">
+        <Viewbox Grid.Row="1" Grid.Column="1" Margin="0,0,0,20">
             <Canvas x:Name="GameCanvas" 
                 Background="#101010"
                 Width="250"
-                Height="500"
+                Height="510"
+                ClipToBounds="True"
+                Loaded="GameCanvas_Loaded"
             />
         </Viewbox>
-        
+        <TextBlock x:Name="ScoreText" Grid.Row="0"
+                   Grid.Column="1"
+                   Text="目前分數："
+                   Margin="0,10"
+                   TextAlignment="Center"
+                   FontFamily="微軟正黑體"/>
+        <StackPanel Grid.Row="1" Grid.Column="0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Right">
+            <TextBlock Text="目前方塊" TextAlignment="Center" FontFamily="微軟正黑體"/>
+            <Image x:Name="HoldImage" Margin="20" Width="125"/>
+        </StackPanel>
+        <StackPanel Grid.Row="1" Grid.Column="2"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Left">
+            <TextBlock Text="下一個" TextAlignment="Center" FontFamily="微軟正黑體"/>
+            <Image x:Name="NextImage" Margin="20" Width="125"/>
+        </StackPanel>
+        <Grid x:Name="GameOverMenu" Background="#CC000000" Grid.RowSpan="2" Grid.ColumnSpan="3" Visibility="Hidden">
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                <TextBlock Text="遊戲結束!!!" FontSize="48" TextAlignment="Center"/>
+                <TextBlock x:Name="FinalScoreText" 
+                           Text="你的得分："
+                           FontSize="36"
+                           TextAlignment="Center"
+                           />
+                <Button Content="再玩一次" 
+                        Background="LightGreen" 
+                        Margin="0,20,0,0" 
+                        Padding="5"
+                        Click="PlayAgain_Click"/>
+            </StackPanel>
+
+        </Grid>
     </Grid>
 </Window>
